# lab-06-multithreads

./: CMakeLists.txt
include/: hash.hpp
scripts/: checks.sh
sources/: hash.cpp  main.cpp
tests/: test.cpp
